--- a/Experiment_1_Numpy's.ipynb
+++ b/Experiment_1_Numpy's.ipynb
@@ -43,7 +43,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Experiment No1:Numpy"
+        "#Experiment No1:Numpy"
       ]
     },
     {
